# FileSystem-MerkleProof

./: README.md  docker-compose.yaml
merkle-tree-file-client/: README.md  package-lock.json  package.json
merkle-tree-file-client/src/: App.css  App.tsx
merkle-tree-file-client/src/components/: FileUpload.tsx
merkle-tree-file-client/src/services/: FileSystemService.ts  MerkleService.ts
merkle-tree-file-client/src/types/: File.ts  MerkleNode.ts
merkle-tree-file-system/: Dockerfile  README.md  build.gradle.kts  settings.gradle.kts
merkle-tree-file-system/src/main/kotlin/lehanncronje/merkletreefilesystem/: MerkleTreeFileSystemApplication.kt
merkle-tree-file-system/src/main/kotlin/lehanncronje/merkletreefilesystem/controller/: FileSystemController.kt
merkle-tree-file-system/src/main/kotlin/lehanncronje/merkletreefilesystem/service/: MerkleTree.ks.kt
merkle-tree-file-system/src/main/kotlin/lehanncronje/merkletreefilesystem/utils/: utils.kt
merkle-tree-file-system/src/test/kotlin/lehanncronje/merkletreefilesystem/: MerkleTreeFileSystemApplicationTests.kt
rust_server/: Cargo.toml  README.md
rust_server/src/: main.rs  merkle_tree.rs
