[package]
name = "multipart_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-multipart = "0.6"
actix-multipart-derive = "0.6"
actix-web = "4.3.0"
base64 = "0.21.2"
futures-util = "0.3.26"
image = "0.24.5"
mime = "0.3.16"
serde = { version = "1.0.164", features = ["derive"] }
sha256 = "1.1.4"
tokio = { version = "1.25.0", features = ["fs"] }
uuid = { version = "1.3.0", features = ["fast-rng", "v4"] }
actix = "0.11.0"
actix-rt = "2.2"
